changes to far for auth

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
       "assets/*": ["src/assets/*"],
       "layouts/*": ["src/layouts/*"],
       "context/*": ["src/context/*"],
-      "locales/*": ["src/locales/*"]
+      "locales/*": ["src/locales/*"],
+      "utils/*": ["src/utils/*"]
     },
 
     /* Bundler mode */
