--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "appwrite": "^13.0.0",
     "bootstrap": "^5.3.2",
-    "classnames": "^2.3.2",
+    "firebase": "^10.5.2",
     "i18next": "^23.6.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
