--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.2",
     "firebase": "^10.5.2",
     "i18next": "^23.6.0",
+    "moment": "^2.29.4",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primereact": "^10.0.9",
