--- a/firebase.json
+++ b/firebase.json
@@ -26,5 +26,13 @@
   },
   "emulators": {
     "singleProjectMode": true
+  },
+  "hosting": {
+    "source": ".",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]
   }
 }
